fix: apply same spacing to all list widgets

--- a/src/theme.scss
+++ b/src/theme.scss
@@ -79,6 +79,8 @@ a[class^='ais-'] {
 /* Menus */
 
 .ais-RefinementList-list,
+.ais-HierarchicalMenu-list,
+.ais-RatingMenu-list,
 .ais-Menu-list {
   margin-bottom: 0.5rem;
   margin-top: 0;
